<resources>
    <string name="app_name">Whist Tracker</string>

    <string name="player_label">Player:</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
    <string name="player_four">Player Four</string>

    <string name="placeholder_number">0</string>

    <string name="title">Whist Tracker</string>
    <string name="title_setup">Add Players</string>
    <string name="subtitle_remaining_players">Players remaining</string>

    <string name="name">Name</string>
    <string name="button_start">Start</string>
    <string name="button_back">Back</string>
    <string name="score">Score</string>

    <string name="calculate">Calculate</string>
</resources>
